--- a/contact_form/templates/contact_form/contact_form.html
+++ b/contact_form/templates/contact_form/contact_form.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 {% block extra_js %}
+<script src="{% static 'js/main.js' %}"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 {% endblock %}
 
@@ -77,7 +78,6 @@
   $("#contact-form").submit(function (e) {
     $('#loading-overlay').fadeToggle(100);
   })
-
 </script>
 
 {% endblock %}
