--- a/contact_form/templates/contact_form/success.html
+++ b/contact_form/templates/contact_form/success.html
@@ -16,8 +16,8 @@
       <h2 class="logo-font">Contact Us</h2>
       <hr class="w-50 mb-1">
       <div class="col w-75 my-5 alert alert-success" role="alert">
-      <h3 class="mt-2"><span class="logo-font">Success!</span> Thank you for your message.</h3>
-    </div>
+        <h3 class="mt-2"><span class="logo-font">Success!</span> Thank you for your message.</h3>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -48,7 +48,11 @@
     <!-- Google Map and contact info -->
     <div class="col-lg-6">
       <div class="map-container mt-5 mb-3">
-        <div id="map"></div>
+        <div id="map"><noscript>
+            <p>If you have been redirected here and you are trying to obtain a quote or send a parcel that means
+              Javascript is disabled.
+              Either enable Javascipt or send us a message and see if we can help.</p>
+          </noscript></div>
       </div>
       <h2 class="">Contact Information</h2>
       <p class="mb-0">Unit 1 Spectrum Business Estate, Bircholt Road</p>
