--- a/static/css/noscript.css
+++ b/static/css/noscript.css
@@ -1,35 +1,27 @@
-
+/* allows users without javascript to use navigation */
 
 li {
   display: block;
-  transition-duration: 0.5s;
+  transition-duration: 0.8s;
     }
-
 
 li:hover {
   cursor: pointer;
     }
 
-ul li ul {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  transition: all 0.5s ease;
-  margin-top: 1rem;
-  left: 0;
-  display: none;    
-}
-
-
-ul li:hover>ul,
-ul li ul:hover {
+li ul:hover>ul,
+li ul ul:hover {
   visibility: visible;
   opacity: 1;
   display: block;
   margin-top: -10px;
 }
 
-ul li a {
+li ul a {
       clear: both;
       width: 100%;
-    }
+}
+
+#navbar-toggle-cbox:checked ~ .collapse:not(.show) {
+    display: block;
+}
