--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,12 +1,33 @@
+<!-- Customizes the header of the admin and also imports custom css classes -->
 {% extends 'admin/base.html' %}
 {% load static %}
-{% block branding %}
-{% block extrastyle %}
-<link rel='stylesheet' href='{% static 'css/admin.css' %}'>
+{% block extrahead %}
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{% static 'css/admin.css' %}">
 {% endblock %}
-<h1 = 'head'>
-  <img width="150" class="logo-font text-dark my-0 d-sm-none d-lg-none" src="/media/wilsons-logo-trans.png"
-    alt="Wilson's Express">
-  Wilson's Express Admin
-</h1>
+{% block branding %}
+<div class="row">
+  <div class="col-12">
+    <div>
+
+      <div id="company-name" class="d-flex align-items-center justify-content-between">
+        
+        <h1 id="site-name">
+          Wilson's Express Admin
+        </h1>
+
+        <a href="{% url 'admin:index' %}">
+          <img width="170" class="logo-font text-dark my-0" src="/media/wilsons-logo-trans.png" alt="Wilson's Express">
+        </a>
+      </div>
+
+    </div>
+  </div>
+</div>
 {% endblock %}
